<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.zinio.e2e</groupId>
	<artifactId>e2eAutomationTest</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<name>e2eAutomationTest</name>
	<description>Zinio-E2E-Testing</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<start-class>com.zinio.zenith.Application</start-class>
		<java.version>1.8</java.version>

		<spring.version>5.0.1.RELEASE</spring.version>
		<spring-boot.version>1.5.8.RELEASE</spring-boot.version>
		<serenity.version>1.5.4-rc.2</serenity.version>
		<serenity.maven.version>1.5.4-rc.2</serenity.maven.version>
		<serenity.cucumber.version>1.1.10</serenity.cucumber.version>
		<thucydides.version>0.9.87</thucydides.version>
		<thucydides.jbehave.version>0.9.87</thucydides.jbehave.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-tx</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context-support</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>${spring.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>6.9.13.6</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<version>${spring-boot.version}</version>
			<exclusions>
				<exclusion>
					<groupId>org.jboss.logging</groupId>
					<artifactId>jboss-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.springframework</groupId>
					<artifactId>spring-tx</artifactId>
				</exclusion>
			</exclusions>
			<version>${spring-boot.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<version>${spring-boot.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.jayway.restassured</groupId>
			<artifactId>rest-assured</artifactId>
			<version>2.9.0</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>6.0.3</version>
		</dependency>
		<dependency>
			<groupId>net.serenity-bdd</groupId>
			<artifactId>serenity-core</artifactId>
			<version>${serenity.version}</version>
		</dependency>
		<dependency>
			<groupId>net.serenity-bdd</groupId>
			<artifactId>serenity-junit</artifactId>
			<version>${serenity.version}</version>
		</dependency>
		<dependency>
			<groupId>net.serenity-bdd</groupId>
			<artifactId>serenity-jbehave</artifactId>
			<version>1.27.0</version>
		</dependency>
		<dependency>
			<groupId>net.thucydides</groupId>
			<artifactId>thucydides-jbehave-plugin</artifactId>
			<version>${thucydides.jbehave.version}</version>
		</dependency>
		<dependency>
			<groupId>net.serenity-bdd</groupId>
			<artifactId>serenity-rest-assured</artifactId>
			<version>${serenity.version}</version>
		</dependency>
		<dependency>
			<groupId>net.serenity-bdd</groupId>
			<artifactId>serenity-cucumber</artifactId>
			<exclusions>
				<exclusion>
					<groupId>net.serenity-bdd</groupId>
					<artifactId>serenity-screenplay</artifactId>
				</exclusion>
				<exclusion>
					<groupId>net.serenity-bdd</groupId>
					<artifactId>serenity-screenplay-webdriver</artifactId>
				</exclusion>
			</exclusions>
			<version>${serenity.cucumber.version}</version>
		</dependency>
		<!-- <dependency> <groupId>net.serenity-bdd</groupId> <artifactId>serenity-jira-plugin</artifactId> 
			<version>1.1.1</version> </dependency> -->
		<dependency>
			<groupId>net.serenity-bdd</groupId>
			<artifactId>serenity-spring</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.springframework</groupId>
					<artifactId>spring-context</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.springframework</groupId>
					<artifactId>spring-context-support</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.springframework</groupId>
					<artifactId>spring-test</artifactId>
				</exclusion>
			</exclusions>
			<version>${serenity.cucumber.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>1.7.25</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.25</version>
		</dependency>
		<dependency>
			<groupId>org.codehaus.groovy</groupId>
			<artifactId>groovy-all</artifactId>
			<version>2.4.12</version>
		</dependency>
		<dependency>
			<groupId>org.codehaus.groovy</groupId>
			<artifactId>groovy-xml</artifactId>
			<version>2.4.12</version>
		</dependency>
		<dependency>
			<groupId>org.codehaus.groovy</groupId>
			<artifactId>groovy</artifactId>
			<version>2.4.12</version>
		</dependency>
		<!-- <dependency> <groupId>junit</groupId> <artifactId>junit-dep</artifactId> 
			<version>4.8.2</version> </dependency> -->
		<dependency>
			<groupId>com.googlecode.lambdaj</groupId>
			<artifactId>lambdaj</artifactId>
			<version>2.3.3</version>
		</dependency>
		<dependency>
			<groupId>com.jcraft</groupId>
			<artifactId>jsch</artifactId>
			<version>0.1.54</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.hierynomus</groupId>
			<artifactId>sshj</artifactId>
			<version>0.17.2</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.jooq</groupId>
			<artifactId>joor</artifactId>
			<version>0.9.6</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.5.3</version>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpmime</artifactId>
			<version>4.5.3</version>
		</dependency>
		<dependency>
			<groupId>org.javassist</groupId>
			<artifactId>javassist</artifactId>
			<version>3.22.0-GA</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-java</artifactId>
			<version>1.2.5</version>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-core</artifactId>
			<version>1.2.5</version>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>gherkin</artifactId>
			<version>2.12.2</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>2.53.0</version>
		</dependency>
		<dependency>
			<groupId>io.appium</groupId>
			<artifactId>java-client</artifactId>
			<version>4.1.2</version>
		</dependency>
		<dependency>
			<groupId>com.googlecode.json-simple</groupId>
			<artifactId>json-simple</artifactId>
			<version>1.1.1</version>
		</dependency>
		<dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-firefox-driver</artifactId>
            <version>3.0.0-beta3</version>
        </dependency>

	</dependencies>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>

		<plugins>

			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-enforcer-plugin</artifactId> 
				<version>1.4</version> <executions> <execution> <id>enforce</id> <configuration> 
				<rules> <requireUpperBoundDeps /> </rules> </configuration> <goals> <goal>enforce</goal> 
				</goals> </execution> </executions> </plugin> -->

			<!--<plugin> -->
			<!--<groupId>org.apache.maven.plugins</groupId> -->
			<!--<artifactId>maven-surefire-plugin</artifactId> -->
			<!--<version>2.18</version> -->
			<!--<configuration> -->
			<!--<skip>true</skip> -->
			<!--</configuration> -->
			<!--</plugin> -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.19.1</version>
				<configuration>
					<testFailureIgnore>true</testFailureIgnore>
				</configuration>
			</plugin>

			<plugin>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.18</version>
				<configuration>
					<systemPropertyVariables>
						<env>local</env>
						<skipGenerateTestData>true</skipGenerateTestData>
						<useCodeGenerator>true</useCodeGenerator>
					</systemPropertyVariables>
					<includes>
						<!--<include>**/zinio/zenith/junit/**/*.java</include> -->
						<include>**/zinio/zenith/**/*.java</include>
						<!--<include>**/*.java</include> -->
					</includes>
					<reuseForks>true</reuseForks>
					<!--<forkCount>2</forkCount> -->
					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<version>1.4.0.RELEASE</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.2</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>net.serenity-bdd.maven.plugins</groupId>
				<artifactId>serenity-maven-plugin</artifactId>
				<version>${serenity.maven.version}</version>
				<dependencies>
					<dependency>
						<groupId>net.serenity-bdd</groupId>
						<artifactId>serenity-core</artifactId>
						<version>${serenity.version}</version>
					</dependency>
				</dependencies>
				<executions>
					<execution>
						<id>serenity-reports</id>
						<phase>post-integration-test</phase>
						<goals>
							<goal>aggregate</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>local</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>2.18</version>
						<configuration>
							<skip>true</skip>
							<excludes>
								<exclude>**/zinio/zenith/util/TestDataGenerator.java</exclude>
							</excludes>
						</configuration>
					</plugin>
					<plugin>
						<artifactId>maven-failsafe-plugin</artifactId>
						<version>2.18</version>
						<configuration>
							<systemPropertyVariables>
								<env>local</env>
								<skipGenerateTestData>true</skipGenerateTestData>
								<useCodeGenerator>true</useCodeGenerator>
							</systemPropertyVariables>
							<includes>
								<!--<include>**/zinio/zenith/junit/**/*.java</include> -->
								<include>**/zinio/zenith/**/*.java</include>
								<!--<include>**/*.java</include> -->
							</includes>
							<excludes>
								<exclude>**/zinio/zenith/util/TestDataGenerator.java</exclude>
							</excludes>
							<reuseForks>true</reuseForks>
							<!--<forkCount>2</forkCount> -->
							<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
						</configuration>
						<executions>
							<execution>
								<goals>
									<goal>integration-test</goal>
									<goal>verify</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>ci-jenkin</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>2.18</version>
						<configuration>
							<skip>true</skip>
							<excludes>
								<exclude>**/zinio/zenith/util/TestDataGenerator.java</exclude>
							</excludes>
						</configuration>
					</plugin>
					<plugin>
						<groupId>net.serenity-bdd.maven.plugins</groupId>
						<artifactId>serenity-maven-plugin</artifactId>
						<version>${serenity.maven.version}</version>
						<executions>
							<execution>
								<id>serenity-reports</id>
								<phase>post-integration-test</phase>
								<goals>
									<goal>aggregate</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<artifactId>maven-failsafe-plugin</artifactId>
						<version>2.18</version>
						<configuration>
							<systemPropertyVariables>
								<env>test</env>
								<skipGenerateTestData>false</skipGenerateTestData>
								<useCodeGenerator>true</useCodeGenerator>
							</systemPropertyVariables>
							<includes>
								<!--<include>**/zinio/zenith/junit/**/*.java</include> -->
								<include>**/zinio/zenith/**/*.java</include>
								<!--<include>**/*.java</include> -->
							</includes>
							<excludes>
								<exclude>**/zinio/zenith/util/TestDataGenerator.java</exclude>
							</excludes>
							<reuseForks>true</reuseForks>
							<!--<forkCount>2</forkCount> -->
							<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
						</configuration>
						<executions>
							<execution>
								<goals>
									<goal>integration-test</goal>
									<goal>verify</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
